# composion-of-onsen-server

./: docker-compose.yml
docker/cron/: Dockerfile  jobs.crontab
docker/elasticsearch/: Dockerfile
docker/fluentd/conf/: fluent.conf
docker/mongodb/: setup.js
docker/mydict/: Dockerfile
docker/nginx/conf/: webapp.conf
docker/webapp/: Dockerfile
webapp/: Cargo.toml  Dockerfile
webapp/data/templates/: default.html  ghost.html
webapp/src/: analysis.rs  comment.rs  main.rs  photo.rs  server.rs  template.rs  token.rs
webapp/src/cli/: analysis_cli.rs  comment_cli.rs  mod.rs  template_cli.rs
webapp/src/models/: analyses.rs  comment_photos.rs  comments.rs  mod.rs  templates.rs
webapp/src/services/: comment_service.rs  mod.rs
webapp/src/utils/: elasticsearch.rs  identifier.rs  image.rs  json.rs  mod.rs  mongodb.rs  scrub.rs  web.rs
