[package]
name = "onsen-compo"
version = "0.1.0"
authors = ["kikei <fujii@xaxxi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
env_logger = "0.7"
futures = "0.1.29"
getopts = "0.2"
handlebars = "3.0"
listenfd = "0.3"
log = "0.4"
mecab = "*"
r2d2 = "0.8.5"
r2d2-mongodb = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"