[package]
name = "onsen-compo"
version = "0.1.0"
authors = ["kikei <fujii@xaxxi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
async-trait = "0.1"
actix-web = "2"
actix-rt = "1.1"
actix-multipart = "0.2"
actix-files = "0.2"
base32 = "0.4"
bytes = "0.5"
mime = "0.3"
env_logger = "0.7"
futures = "0.3"
futures-util = "0.3"
tokio = "0.2"
handlebars = "3.0"
listenfd = "0.3"
log = "0.4"
mecab = "*"
elasticsearch = "7.7.1-alpha.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
uuid = { version = "0.8", features = ["v4"] }
jsonwebtoken = "7.1"
image = "0.23"